--- a/package.json
+++ b/package.json
@@ -4,15 +4,18 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-   "dev": "nodemon api/index.js",
-   "start": "node api/index.js"
+    "dev": "nodemon api/index.js",
+    "start": "node api/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "mogoose": "^0.0.1-security",
+    "mongoose": "^8.17.0",
     "nodemon": "^3.1.10"
   }
 }
