--- a/client/package.json
+++ b/client/package.json
@@ -15,12 +15,14 @@
     "firebase": "^12.1.0",
     "framer-motion": "^12.23.12",
     "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.542.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.7.1",
     "redux-persist": "^6.0.0",
+    "swiper": "^11.2.10",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
